--- a/.github/workflows/cron-descriptor-repo-stats.yml
+++ b/.github/workflows/cron-descriptor-repo-stats.yml
@@ -1,3 +1,4 @@
+name: Cron Expression Descriptor Repo Stats
 on:
   schedule:
     # Run this once per day, towards the end of the day for keeping the most
